reformat corporate environment entry and fix text alignment

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -5,5 +5,8 @@
 
 body {
 	width: 650px;
+}
+
+.entry-title, .entry-content {
 	text-align: left;
 }
